syntax = "proto3";

import "common.proto";
import "google/protobuf/timestamp.proto";
import "decorations/plugin_anchor.proto";
import "decorations/plugin_color.proto";
import "decorations/plugin_link.proto";
import "decorations/plugin_mention.proto";
import "nodes/plugin_code.proto";
import "nodes/plugin_heading.proto";
import "nodes/plugin_paragraph.proto";
import "nodes/plugin_quote.proto";
import "plugins/plugin_button.proto";
import "plugins/plugin_divider.proto";
import "plugins/plugin_file.proto";
import "plugins/plugin_gallery.proto";
import "plugins/plugin_giphy.proto";
import "plugins/plugin_html.proto";
import "plugins/plugin_image.proto";
import "plugins/plugin_link_preview.proto";
import "plugins/plugin_map.proto";
import "plugins/plugin_poll.proto";
import "plugins/plugin_sound_cloud.proto";
import "plugins/plugin_vertical_embed.proto";
import "plugins/plugin_video.proto";

message RicosContent {
    RicosDocument doc = 1 [required = true]; /// Document root
    RicosSelection selection = 2; /// Last saved selection
    string version = 3 [required = true]; /// Ricos version used to create this schema
}

message RicosDocument {
    repeated RicosNode nodes = 1 [required = true]; /// List of nodes
    google.protobuf.Timestamp last_edited = 2 [required = true]; /// Timestamp when the document was last edited
}

message RicosSelection {
    string anchor_node = 1 [required = true]; /// Selection start node key
    int32 anchor_offset = 2; /// Selection start offset (default: 0)
    string focus_node = 3; /// Selection end node key
    int32 focus_offset = 4; /// Selection end offset (default: 0)
}

message RicosNode {
    string type = 1 [required = true]; /// Node type
    string key = 2 [required = true]; /// Node unique indentifier
    repeated RicosNode nodes = 3 [required = true]; /// List of child nodes
    oneof data {
        RicosText ricos_text = 4;
        RicosImage ricos_image = 5;
        RicosDivider ricos_divider = 6;
        RicosVideo ricos_video = 7;
        RicosVerticalEmbed ricos_vertical_embed = 8;
        RicosButton ricos_button = 9;
        RicosFile ricos_file = 10;
        RicosGallery ricos_gallery = 11;
        RicosGiphy ricos_giphy = 12;
        RicosHTML ricos_html = 13;
        RicosLinkPreview ricos_link_preview = 14;
        RicosMap ricos_map = 15;
        RicosPoll ricos_poll = 16;
        RicosSoundCloud ricos_sound_cloud = 17;
        RicosParagraph ricos_paragraph = 18;
        RicosCode ricos_code = 19;
        RicosHeading ricos_heading = 20;
        RicosQuote ricos_quote = 21;
    }
}

message RicosText {
    string text = 1 [required = true]; /// Textual data
    repeated RicosDecoration decorations = 2; /// List of decorations
}

/// Adds appearence changes to text
message RicosDecoration {
    string type = 1 [required = true]; /// Decoration type
    oneof data {
        RicosColor ricos_color = 2;
        RicosMention ricos_mention = 3;
        RicosAnchor ricos_anchor = 4;
        RicosLink ricos_link = 5;
    }
}